--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -344,7 +344,7 @@ ul.dis-attachments
         text-align: right
         float: none
         position: relative
-        z-index: 20
+        z-index: 1
         +box-shadow(lighten($c-dark-cool-bg, 95%) 0 1px 0, darken($c-dark-cool-bg, 60%) 0 -1px 0)
         &.top
             +border-radius($radius-sm+2 $radius-sm+2 0 0)
